🐛 Fix focus on safari

--- a/src/components/GitmojiList/Toolbar/styles.module.css
+++ b/src/components/GitmojiList/Toolbar/styles.module.css
@@ -33,6 +33,10 @@
   outline: none;
 }
 
+.searchInput:focus {
+  outline: none;
+}
+
 .kbd {
   right: 0;
   align-items: center;
